# psychotherapie-seliger

./: .dockerignore  .env.development  .env.e2e  .env.test  .eslintrc.js  .gitattributes  .gitignore  .tool-versions  CHANGELOG.md  Dockerfile  README.md  build.sh  cloudbuild.yaml  docker-compose.yml  docker-entrypoint.js  docker-entrypoint.sh  eslint.config.js  inspector-polyfill.ts  jest.config.js  jest.config.ts  jest.setup.ts  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  pkg.json  playwright.config.ts  server.js  server.ts  tailwind.config.ts  tsconfig.json  tsconfig.pkg.json
.changeset/: calm-lamps-press.md  cyan-badgers-flow.md  eleven-zebras-jump.md  fine-trees-hammer.md  five-candies-teach.md  fresh-lines-help.md  fuzzy-actors-tease.md  odd-nights-smile.md  rare-laws-shake.md  smart-oranges-wink.md  swift-worms-find.md  tender-crews-attack.md  true-olives-see.md  wide-poets-look.md  yummy-symbols-lose.md
.config/: kysely.config.ts
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: aboutMe.tsx  contact.tsx  costs.tsx  email.tsx  footer.tsx  navbar.tsx  phonenumber.tsx  section.tsx  spinner.tsx  submitButton.tsx  successMessage.tsx  therapie.tsx  treatmentSpectrum.tsx
e2e/: example.spec.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binary/: libjpeg.8.dylib-aarch64-apple-darwin  libqpdf.30.2.0.dylib-aarch64-apple-darwin  libqpdf.30.dylib-aarch64-apple-darwin  qpdf-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+288 files in other folders)
