[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# tauri-plugin-log 2.8.x requires tauri ^2.9.3 — keep JS @tauri-apps/* on the same minor as the CLI
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2.8"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
